2001-09-15  Chris Abbey  <jikes@cabbey.net>

	* src/m4/ac_try_encoding.m4: Add fallback test for ISO8859-1 to
	fix AIX's iconv (and others without ISO-8859-1) - patch	188.
	* configure: regenerate

2001-09-15  Chris Abbey  <jikes@cabbey.net>

	* configure.in: enable users to activate rtti tests without
	hacking configure script, just by setting envvar - patch 187.
	* configure: regenerate

2001-09-15  Chris Dennis  <Chris.Dennis@invidi.com>

	* src/platform.h: Add support for MS VC++ __int64 - patch 190,
	from bug 1897.

2001-09-15  Chris Dennis  <Chris.Dennis@invidi.com>

	* src/java.g: Fix namespace typo - patch 189, from bug 1896.
	* src/javaact.h: regenerate

2001-09-14  Jerry Veldhuis  <jerry@invidi.com>

	* src/symbol.h (IsInner): Fix a regression caused by patch 90.
	This patch is a hack, and a cleaner version should be made before
	jikes 1.16 - patch 185, from bug 1895.

2001-09-13  Eric Blake  <ebb9@email.byu.edu>
	    Michael Ernst  <mernst@lcs.mit.edu>
	
	* src/Makefile.am:
	* src/Makefile.in: fix typo that broke --enable-maintainer-mode
	* src/access.h:
	* src/ast.cpp:
	* src/ast.h:
	* src/body.cpp:
	* src/bytecode.cpp:
	* src/bytecode.h:
	* src/case.cpp:
	* src/case.h:
	* src/class.h:
	* src/code.cpp:
	* src/code.h:
	* src/control.cpp:
	* src/control.h:
	* src/decl.cpp:
	* src/definite.cpp:
	* src/depend.cpp:
	* src/depend.h:
	* src/diagnose.cpp:
	* src/diagnose.h:
	* src/double.cpp:
	* src/double.h:
	* src/dump.cpp:
	* src/error.cpp:
	* src/error.h:
	* src/expr.cpp:
	* src/gencode.java:
	* src/getclass.cpp:
	* src/getclass.h:
	* src/incrmnt.cpp:
	* src/init.cpp:
	* src/java.g:
	* src/javaact.cpp:
	* src/javaact.h:
	* src/javadcl.h:
	* src/javadef.h:
	* src/javaprs.h:
	* src/javasym.h:
	* src/jikes.cpp:
	* src/jikesapi.cpp:
	* src/jikesapi.h:
	* src/long.cpp:
	* src/long.h:
	* src/lookup.cpp:
	* src/lookup.h:
	* src/lpginput.cpp:
	* src/lpginput.h:
	* src/modifier.cpp:
	* src/op.cpp:
	* src/op.h:
	* src/option.cpp:
	* src/option.h:
	* src/parser.cpp: